<resources>
    <string name="app_name">AmpConnect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_local">Local</string>
    <string name="menu_youtube">Youtube</string>
    <string name="menu_profile">Profile</string>
</resources>